fixed spacing and sizing on LandingPage sign in

--- a/src/styles/less/LandingPage.less
+++ b/src/styles/less/LandingPage.less
@@ -36,8 +36,9 @@
 
   h2 {
     vertical-align: top;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-family: nunito;
+    line-height: 2.7rem;
   }
 
   label {
@@ -48,8 +49,7 @@
   #okta-signin-username,
   #okta-signin-password {
     width: 100%;
-    padding-left: 3px;
-    height: 1.5rem;
+    padding-left: 8px;
     border: 1px solid @dim-grey;
     border-radius: 10px;
   }
@@ -58,6 +58,8 @@
   .o-form-input-name-password {
     font-size: 1.5rem;
   }
+
+  .okta-form-input-error o-form-input-error o-form-explain
 
   .custom-checkbox {
     padding-bottom: 5%;
@@ -73,7 +75,7 @@
     margin: 0 auto;
     height: 3rem;
     .button {
-      width: 50%;
+      width: 100%;
       border-radius: 14px;
       justify-content: center;
       cursor: pointer;
